[metadata]
name = pyoam
version = 0.0.3
author = Timothy Drysdale
author_email = timothy.d.drysdale@gmail.com
description = Array factor calculations for linear and orbital angular momentum mode antennas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timdrysdale/pyoam
project_urls =
    Bug Tracker = https://github.com/timdrysdale/pyoam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
			= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
